@@ -115,7 +115,7 @@ class AKNewProjectViewController: AKCustomViewController, UITextFieldDelegate, U
         
         if let data = self.localize(key: "WorkingDayTime") as? [Date] {
             for element in data {
-                var components = Calendar.current.dateComponents([.hour, .minute], from: element)
+                var components = Func.AKGetCalendarForLoading().dateComponents([.hour, .minute], from: element)
                 self.workingDayTimeData.append(String(format: "%.2i:%.2i", components.hour ?? 0, components.minute ?? 0))
             }
         }
